# rust_bot

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  docker.txt
src/: error.rs  main.rs
src/audio/: info.rs  mod.rs  pause.rs  play.rs  queue.rs  resume.rs  skip.rs  stop.rs
src/test/: button.rs  select.rs  test.rs
